[gd_scene load_steps=12 format=2]

[ext_resource path="res://ASSETS/fonts/RockSalt-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ButtonsTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Bubble.png" type="Texture" id=3]
[ext_resource path="res://UI/EndScreen.gd" type="Script" id=4]
[ext_resource path="res://UI/BackgroundEnd.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/music/button_click.wav" type="AudioStream" id=6]
[ext_resource path="res://ASSETS/music/menu_music.mp3" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="BackgroundEnd" type="Sprite" parent="Panel"]
position = Vector2( 512, 300 )
texture = ExtResource( 5 )

[node name="YouWon" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -282.0
margin_top = 27.0
margin_right = 102.0
margin_bottom = 99.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "YOU WON!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -91.0
margin_right = 32.0
margin_bottom = -19.0

[node name="Time" type="Label" parent="HBoxContainer"]
margin_right = 113.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "TIME: "
align = 1
valign = 1

[node name="TimeValue" type="Label" parent="HBoxContainer"]
margin_left = 117.0
margin_right = 231.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -196.0
margin_top = -229.0
margin_right = 55.0
margin_bottom = -105.0
rect_pivot_offset = Vector2( -1112, -480 )

[node name="GoToMainMenu" type="Button" parent="VBoxContainer"]
margin_right = 251.0
margin_bottom = 60.0
focus_neighbour_top = NodePath("../Quit")
mouse_filter = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
align = 0
icon_align = 1

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 251.0
margin_bottom = 124.0
focus_neighbour_bottom = NodePath("../GoToMainMenu")
mouse_filter = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
align = 0
icon_align = 1

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 512, 600 )
rotation = -1.5708
amount = 20
lifetime = 10.0
preprocess = 8.0
speed_scale = 0.5
explosiveness = 0.07
randomness = 0.32
lifetime_randomness = 0.11
texture = ExtResource( 3 )
emission_shape = 3
emission_points = PoolVector2Array( 20, 500, 20, 250, 20, -250, 20, -500, 0, 0 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
spread = 90.0
gravity = Vector2( 20, 2 )
initial_velocity = 30.0
initial_velocity_random = 0.1
angular_velocity = 50.0
orbit_velocity = 0.01
orbit_velocity_random = 0.4
linear_accel = 8.0
radial_accel = -10.0
radial_accel_random = 1.0
damping = 7.91
damping_random = 0.25
angle = 720.0
angle_random = 0.5
scale_amount = 0.01
scale_amount_random = 0.07

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0
pitch_scale = 0.6

[connection signal="button_up" from="VBoxContainer/GoToMainMenu" to="." method="_on_GoToMainMenu_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
